--- a/shared-data/default-theme/less/app/pile.less
+++ b/shared-data/default-theme/less/app/pile.less
@@ -1,6 +1,7 @@
         /* Pile */
 
   #pile-results {
+    table-layout: fixed;
     width: 100%;
     min-width: 800px;
     border-collapse: collapse;
@@ -41,7 +42,7 @@
   #pile-results        td.draggable:hover { cursor: move; }
   #pile-results        td.crypto-and-tags,
   #pile-results        td.message-nav,
-  #pile-results        td.avatar       { min-width: 24px; text-align: center; white-space: nowrap; }
+  #pile-results        td.avatar       { width: 24px; text-align: center; white-space: nowrap; }
   #pile-results        td.avatar a     { display: block; text-align: center; }
   #pile-results        td.avatar a img { display: inline-block; border-radius: 2px; }
 
@@ -111,14 +112,12 @@
   }
 
   #pile-results td.subject {
-    min-width: 374px;
     overflow: hidden;
     word-wrap: normal;
     word-break: normal;
   }
 
   #pile-results td.subject a.item-subject {
-    width: 700px;
     display: block;
     white-space: nowrap;
     overflow: hidden;
