--- a/shared-data/default-theme/less/app/tablet.less
+++ b/shared-data/default-theme/less/app/tablet.less
@@ -4,7 +4,7 @@
   /* Make logo into just icon */
   .topbar-logo { width: 90px; overflow: hidden; }
   .topbar-logo-name { display: none; }
-  
+
   /* Shrink the sidebar a bit, but keep it. */
   #sidebar { width: 180px; }
   #sidebar-wrapper { width: 179px; font-size: 0.7em; }
@@ -27,15 +27,12 @@
 
   /* Pile */
   #pile-results { min-width: 300px; }
-  #pile-results td.from { width: 150px; }
-  #pile-results td.subject { min-width: 220px; }
-  #pile-results td.subject a { width: 214px; }
+  #pile-results td.from { width: 220px; }
   div.bulk-actions-hints { position: fixed; top: -100px; }
 
   #pile-results xtd.draggable { display: none; }
   #pile-results td.avatar { padding-left: 4px; }
 
-  #pile-results td.subject a.item-subject { width: 485px; }
 
   xtable, xtbody { display: block; white-space: normal; width: 100%; }
   xtr { display: block; height: auto; width: 100%; }
